@@ -4769,6 +4769,15 @@ Equivalent to the now deprecated FastSchedule=2 option.
 Use the hwloc l3cache as the socket count. Can be useful on certain processors
 where the socket level is too coarse, and the l3cache may provide better
 task distribution. (E.g., along CCX boundaries instead of socket boundaries.)
+Mutually exclusive with numa_node_as_socket.
+Requires hwloc v2.
+.TP
+\fBnuma_node_as_socket\fR
+Use the hwloc NUMA Node to determine main hierarchy object to be used as socket.
+If the option is set Slurm will check the parent object of NUMA Noda and use it
+as socket. This option may be usefull for architectures likes AMD Epyc, where
+number of nodes per socket may be configured.
+Mutually exclusive with l3cache_as_socket.
 Requires hwloc v2.
 .IP
 
